Fixed issue with buttons covering title text.

--- a/app/frontend/styles.css
+++ b/app/frontend/styles.css
@@ -12,9 +12,7 @@ h1 {
 }
 
 #content {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    margin-top: 20px;
 }
 
 button {
